# ncpipes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ncpipes/: cli.h  config.h  direction.h  pipe.h  point.h  util.h
src/: CMakeLists.txt  cli.c  main.c  pipe.c  util.c
